# yandex_smart_home

./: .cSpell.json  .coveragerc  .git-blame-ignore-revs  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CNAME  LICENSE.txt  README.en.md  README.markdown  README.md  README.v1.md  __init__.py  capability.py  configuration.yaml  const.py  error.py  hacs.json  helpers.py  http.py  index.html  latest  manifest.json  mkdocs.yml  pyproject.toml  requirements_dev.txt  requirements_test.txt  setup.cfg  smart_home.py  versions.json
.github/workflows/: ci.yml  close-stale.yml  docs.yml  hacs-validate.yml  lint.yml  linting.yml  push-pull.yml  release.yml  tests.yml
custom_components/yandex_smart_home/: __init__.py  capability.py  capability_color.py  capability_custom.py  capability_mode.py  capability_onoff.py  capability_range.py  capability_toggle.py  capability_video.py  cloud.py  cloud_stream.py  color.py  config_flow.py  config_schema.py  config_validation.py  const.py  device.py  diagnostics.py  entity.py  entry_data.py  error.py  handlers.py  helpers.py  http.py  logbook.py  manifest.json  notifier.py  prop.py  prop_custom.py  prop_event.py  prop_float.py  property.py  property_custom.py  property_event.py  property_float.py  services.yaml  skill.py  smart_home.py  unit_conversion.py
custom_components/yandex_smart_home/schema/: __init__.py  base.py  callback.py  capability.py  capability_color.py  capability_mode.py  capability_onoff.py  capability_range.py  capability_toggle.py  capability_video.py  device.py  property.py  property_event.py  property_float.py  request.py  response.py
custom_components/yandex_smart_home/translations/: en.json  ru.json
dev/: 404.html  index.html  sitemap.xml
dev/_overrides/: main.html
dev/advanced/direct-connection/: index.html
dev/advanced/error-codes/: index.html
dev/advanced/events/: index.html
dev/assets/: extra.css
dev/breaking-changes/: index.html
dev/config/connection-type/: index.html
dev/config/entity/: index.html
dev/config/filter/: index.html
dev/config/getting-started/: index.html
dev/config/modes/: index.html
dev/config/multi-ha/: index.html
dev/devices/button/: index.html
dev/devices/camera/: index.html
dev/devices/climate/: index.html
dev/devices/light/: index.html
dev/faq/: index.html
dev/install/component/: index.html
dev/install/integration/: index.html
dev/quasar/: index.html
dev/quirks/: index.html
dev/recipes/: index.html
dev/recipes/about/: index.html
dev/recipes/dishwasher/: index.html
dev/recipes/heater/: index.html
dev/recipes/humidifier/: index.html
dev/recipes/kettle/: index.html
dev/recipes/other/: index.html
dev/recipes/tv/: index.html
dev/search/: search_index.json
dev/supported-devices/: index.html
dev/troubleshoot/: index.html
docs/: README.md  advanced-settings.md  breaking-changes.md  capabilities.md  config-example.yaml  direct-connection.md  faq.md  index.md  quasar.md  quirks.md  recipes.md  sensors.md  stream.md  supported-devices.md  troubleshoot.md
docs/advanced/: capabilities.md  clone.md  direct-connection.md  error-codes.md  events.md
docs/advanced/capabilities/: about.md  mode.md  range.md  toggle.md
docs/advanced/direct-connection/: index.md  vk.md  yandex.md
docs/assets/.bin/: optimize-png  safari-resize
docs/config/: connection-type.md  entity.md  filter.md  getting-started.md  modes.md  multi-ha.md  vacuum.xiaomi_b106bk_c6cc_robot_cleaner filter.md
docs/devices/: button.md  camera.md  climate.md  light.md  sensor.md
docs/devices/sensor/: about.md  event.md  float.md
docs/install/: component.md  integration.md
docs/recipes/: about.md  dishwasher.md  heater.md  humidifier.md  kettle.md  other.md  tv.md
docs/troubleshoot/: debug.md  index.md
latest/: 404.html  index.html
latest/_overrides/: main.html
latest/advanced/capabilities/: index.html
latest/advanced/clone/: index.html
latest/faq/: index.html
latest/quasar/: index.html
latest/quirks/: index.html
latest/recipes/: index.html
latest/supported-devices/: index.html
latest/troubleshoot/: index.html
master/: 404.html  index.html  sitemap.xml
master/breaking-changes/: index.html
master/faq/: index.html
master/quasar/: index.html
master/quirks/: index.html
master/recipes/: index.html
master/search/: search_index.json
master/supported-devices/: index.html
master/troubleshoot/: index.html
tests/: README.md  __init__.py  conftest.py  requirements_2023.1.txt  requirements_2023.10.txt  requirements_2023.11.txt  requirements_2023.12.txt  requirements_2023.2.txt  requirements_2023.3.txt  requirements_2023.4.txt  requirements_2023.5.txt  requirements_2023.6.txt  requirements_2023.7.txt  requirements_2023.8.txt  requirements_2023.9.txt  requirements_2024.1.txt  requirements_2024.1b.txt  requirements_2024.2.txt  requirements_2024.4.txt  requirements_2024.5.txt  test_capability.py  test_capability_color.py  test_capability_color_setting.py  test_capability_custom.py  test_capability_mode.py  test_capability_onoff.py  test_capability_range.py  test_capability_toggle.py  test_capability_video.py  test_cloud.py  test_cloud_stream.py  test_config_flow.py  test_config_schema.py  test_config_validation.py  test_device.py  test_diagnostics.py  test_entity.py  test_entry_data.py  test_handlers.py  test_helpers.py  (+14 more)
tests/fixtures/: devices_action.json  devices_action_vk.json  madness.yaml  valid-config.yaml
tests/snapshots/: test_diagnostics.ambr
v0.6.x/: 404.html  CNAME  index.html  sitemap.xml
v0.6.x/_overrides/: main.html
v0.6.x/faq/: index.html
v0.6.x/quasar/: index.html
v0.6.x/quirks/: index.html
v0.6.x/recipes/: index.html
v0.6.x/search/: search_index.json
v0.6.x/supported-devices/: index.html
v0.6.x/troubleshoot/: index.html
v1.0.x/: 404.html  index.html  sitemap.xml
v1.0.x/_overrides/: main.html
v1.0.x/breaking-changes/: index.html
v1.0.x/faq/: index.html
v1.0.x/quirks/: index.html
v1.0.x/search/: search_index.json
v1.0.x/supported-devices/: index.html
v1.0.x/troubleshoot/: index.html
(+97 files in other folders)
